# iStore

./: README.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/agent/: __init__.py  main_agent.py  utils.py
backend/app/agent/agents/: __init__.py  order_agent.py  product_agent.py  wishlist_agent.py
backend/app/agent/tools/: __init__.py  auth.py  order_tools.py  product_tools.py  wishlist_tools.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: __init__.py  cart_model.py  order_model.py  otp.py  otp_model.py  product_model.py  user.py  user_model.py  wishlist_model.py
backend/app/routes/: agent_route.py  auth.py  auth_route.py  cart_route.py  order_route.py  product_route.py  user_route.py  wishlist_route.py
backend/app/schemas/: auth.py  auth_schema.py  cart_schema.py  order_schema.py  otp_schema.py  product_schema.py  user.py  user_schema.py  wishlist_schema.py
backend/app/services/: auth_service.py  email_service.py  order_service.py  otp_service.py  product_service.py  user_service.py  wishlist_service.py
backend/app/utils/: email_service.py  otp_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: Chatbot.tsx  Footer.tsx  Navbar.tsx  Sidebar.tsx  StarRating.tsx
frontend/contexts/: AuthContext.tsx  CartContext.tsx  CheckoutContext.tsx  (+3 more)
(+93 files in other folders)
