[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "motor>=3.3.0",
    "dnspython>=2.4.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.9",
    "emails[jinja]>=0.6",
    "jinja2>=3.1.0",
    "bcrypt>=5.0.0",
    "certifi>=2024.0.0",
    "langchain-core>=1.4.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain>=1.3.4",
    "langgraph>=1.2.4",
    "langchain-classic>=1.0.7",
]
